kuberenetes/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
spec:
  selector:
    app: rails-app
  ports:
    - port: 80              # External port
      targetPort: 3000      # Internal container port
      nodePort: 30080       
  type: NodePort
