kuberenetes/rails-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rails-app.local  # You can use a custom domain (e.g., rails-app.local)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-service
                port:
                  number: 80
